final landing page

--- a/estilo.css
+++ b/estilo.css
@@ -9,12 +9,13 @@ html, body, .capa {
 	height: 100%;
 }
 
-body{	
+body {	
 	background: url('imagens/capa.png'),
 	 url('imagens/ruido.png'), 
 	 linear-gradient(50deg,#ff4169,#7c26f8); 
 	background-attachment: fixed; 
 	font-family: helvetica, arial, sans-serif;
+	overflow-x: hidden;
 }
 
 
@@ -29,29 +30,30 @@ body{
 	color: transparent;
 }
 
-nav.navbar-transparente{
+nav.navbar-transparente {
 	padding: 15px 0px;
 	background-color: rgba(0,0,0,0.6);
 	border: none;
 }
 
-.navbar-brand{	
+.navbar-brand {	
 	padding: 5px 15px;
 }
 
-.divisor{
+.divisor {
 	width: 1px;
 	height: 16px;
 	background: white;
 	margin: 16px 10px;
 }
 
-.navbar-inverse .navbar-nav>li>a {
+.navbar-inverse .navbar-nav>li>a, footer .nav a {
 	color: white;
 }
 
-.navbar-inverse .navbar-nav>li>a:hover {
+.navbar-inverse .navbar-nav>li>a:hover, footer .nav a:hover {
 	color: #9bf0e1;
+	background: none;
 }
 
 /* -------------- Imagens de Capa ------------------- */
@@ -99,6 +101,44 @@ nav.navbar-transparente{
 	color: black;
 }
 
+/* -------------- Serviço ------------------- */
+
+#servicos{
+	background-color: #fff;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+.albuns{
+	padding: 10px 0px 10px 0px;
+}
+
+/* -------------- recursos ------------------- */
+
+#recursos {	
+	padding-top: 20px;
+	padding-bottom: 20px;
+	color: #fff;
+}
+
+.rotacionar {
+	transform: rotate(30deg);
+	-ms-transform: rotate(30deg); /* IE 9 */
+	-webkit-transform: rotate(30deg);/* Chrome, Safari, Opera */	
+	padding-left: 80px;
+}
+
+/* -------------- Rodapé ------------------- */
+
+footer {
+	background-color: #000;
+	padding: 50px 0 20px 0;
+	position: relative;
+}
+
+.item-rede-social {
+	float: right;
+}
 
 
 /*===================Tipografia=====================*/
@@ -108,4 +148,30 @@ h1 {
 	font-weight: 900;
 	letter-spacing: -0.05em;
 	margin-bottom: 50px;
+}
+
+h2 {
+	font-size: 50px;
+	font-weight: 700;
+	letter-spacing: -0.04em;
+}
+
+h3 {
+	font-size: 35px;
+	font-weight: 700;
+	letter-spacing: -0.04em;
+}
+
+#rodape h4 {
+	color: #919496;
+	font-size: 12px;
+	text-transform: uppercase;
+}
+
+#servicos h2,#servicos h3 {
+	color: #7c25f8;
+}
+
+#recursos h3 {
+	color: #9bf0e1;
 }
